# cs3423-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  Tabulate  example.tblt  formula.txt  makefile  queries.txt  readme.md  test.txt  translation.md
codes/: expressions.tblt
compiler/: auxilary.hh  driver.cc  driver.hh  lex.l  main.cc  makefile  parser.y
docs/report/: report.tex
docs/report/codes/: run.sh
docs/spec/: main.ps  main.tex  specification.tex
docs/spec/codes/: assgn_stmt.tblt  cmpd_stmt.tblt  decl_stmt.tblt  expressions.tblt  func.tblt  func_call.tblt  import_main.tblt  iter_stmt.tblt  jump_stmt.tblt  main.tblt  return_stmt.tblt  sel_stmt.tblt
docs/spec/tables/: .~lock.operators.xlsx#  convert.sh  keywords.tex  keywords.xlsx  non-primitives.tex  non-primitives.xlsx  operators.tex  operators.xlsx  primitives.tex  primitives.xlsx  punctuators.tex  punctuators.xlsx
dynamic_typing_prototype2/: Makefile  any.cc  any.hh  helper.cc  helper.hh  inbuilt.cc  runtime.hh  state.hh  test.tblt  translated  translated.cc
dynamic_typing_test/: runtime.hh  state.hh  test.tblt  translated  translated.cc
include/: driver.hh  runtime_env.hh.in  symtab.hh  tabulate.hh  translation.hh  types.hh
runtime/: CMakeLists.txt  any.cc  helper.cc  inbuilt.cc  state.cc  translated.cc  types.cc
runtime/include/: any.hh  helper.hh  inbuilt.hh  runtime.hh  state.hh  types.hh
src/: CMakeLists.txt  Makefile  auxilary.cc  auxilary.hh  driver.cc  driver.hh  lex.l  lex.yy.c  main.cc  parser.tab.cc  parser.tab.hh  parser.y  parser.yy  symtab.cc  tabulate.cc  tabulate.hh  tabulate_ST.cc  translation.cc  types.cc
src/tabulate/: driver.cc  driver.hh  symtab.cc  symtab.hh  types.cc  types.hh
test/: 1.tblt  constructor.tblt  default.tblt  example.tblt  func_test_neg.tblt  func_test_pos.tblt  sem.cc  sem.tblt  sem.tblt.cc  test1.tblt  translate.tblt
testcases/: CMakeLists.txt
testcases/Phase-II-testcases/: CMakeLists.txt  t1.txt  t2.txt  t3.txt  t4.txt  t5.txt  t6.txt  t7.txt  t8.txt
testcases/Phase-III-testcases/: CMakeLists.txt  t1.txt  t2.txt  t3.txt  t4.txt  t5.txt  t6.txt  t7.txt  t8.txt
testcases/Phase-IV-testcases/: CMakeLists.txt  t1.txt  t2.txt  t3.txt  t4.txt  t5.txt  t6.txt  t7.txt  t8.txt  test.csv
